[package]
name = "rawshift-video"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Video format support for rawshift (not yet implemented)"
documentation = "https://docs.rs/rawshift-video"
keywords = ["video", "raw", "metadata"]
categories = ["multimedia::video"]

[dependencies]

# The full video feature tree is laid out in a later stage. For now `full` is
# an empty placeholder so the `rawshift` facade can forward to it.
[features]
default = []
full = []
