[package]
name = "rawshift"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "RAW image processing library focused on compatibility, correctness, and interoperability"
documentation = "https://docs.rs/rawshift"
keywords = ["raw", "image", "dng", "arw", "photo"]
categories = ["multimedia::images", "encoding", "parser-implementations"]
readme = "../../README.md"

[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rawshift-image = { workspace = true, optional = true }
# `rawshift-video` is deliberately absent: it is parked and unpublished for v1.
# A facade that ships to crates.io cannot depend on an unpublished crate, and a
# `video` feature that gates zero code is a promise the workspace cannot keep.
# It is re-added when video has an implementation.

# The `rawshift` facade exposes only coarse, high-level features. Cargo cannot
# auto-forward a child crate's features, so per-format flags (jpeg, png, arw, …)
# are intentionally NOT re-listed here — depend on `rawshift-image` directly for
# fine-grained control. See the README "Feature Flags" section.
[features]
default = ["image"]
# Enable still-image support with `rawshift-image`'s own default formats.
image = ["dep:rawshift-image"]
# Serde derives for metadata/option types (no-op unless `image` is also on).
serde = ["rawshift-image?/serde"]
# Hardware still-frame decode (HEVC for HEIC, AV1 for AVIF) via rawshift-hwdec.
# `hw` selects the native backend for the compile target; the `hw-*` flags pin
# one explicit backend and fail the compile on any other target. All are
# no-ops unless `image` is also on. See docs/SUPPORT.md for the permanent
# target/API matrix.
hw              = ["rawshift-image?/hw"]
hw-videotoolbox = ["rawshift-image?/hw-videotoolbox"]
hw-vaapi        = ["rawshift-image?/hw-vaapi"]
hw-mediacodec   = ["rawshift-image?/hw-mediacodec"]
# Everything: every image format, serde, and hardware decode. v1 is image-only
# — there is no `video` feature until `rawshift-video` has an implementation.
full = ["image", "rawshift-image/full", "serde"]
